# C.R.A.C.K.

./: .coverage  .gitignore  AGENT2_PEN300_CLEANUP_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HAVE-I-BEEN-PWNED-README.md  IMPLEMENTATION_SUMMARY_COMMAND_HISTORY.md  README.md  burpcurl.txt  exploits  graph.html  have-i-been-pwned.sh  neo4json.md  process_pen300_reports.py  pyproject.toml  requirements.txt  setup.py
crack/: .coveragerc  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMMAND_EDITOR_TESTING_GUIDE.md  CONTRIBUTING.md  CROSS_CHAIN_TEST_REPORT.md  Cross_Chain_Linking_Solution_Checklist.md  ENHANCEMENT_SUMMARY.md  ESCALATION_FLOW_DIAGRAM.md  FINAL_VALIDATION_SUMMARY.md  FIX_COMPLETE_DETAILS.md  HTB_HARD_UPGRADE_PLAN.md  HTTP_PLUGIN_FIX_REPORT.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPORT_SCRIPT_FIX_SUMMARY.md  INSTALL.md  LINK_MIGRATION_COMPLETE.md  LIVE_DB_VALIDATION_REPORT.md  MARKDOWN_CLEANUP_PLAN.md  NEO4J_MIGRATION_COMPLETE.md  PHASE3_COMPLETION_REPORT.md  PHASE_7_IMPLEMENTATION_SUMMARY.md  Phase2_Implementation_Summary.md  QUICKSTART_NEO4J.md  QUICK_TEST_COMMANDS.sh  README.md  README_IMPORT_FIX.md  REFACTORED_PHASE2_PLAN.md  SECURITY.md  STARTER_USAGE.md  STATE_CONDITIONS_REMOVAL_SUMMARY.md  TESTING_GUIDE.md  VALIDATION_QUICK_REFERENCE.md  VALIDATION_REPORT.md  (+44 more)
crack/CRACK_targets/: qa-story-1-generic-http.json  qa-story-2-http-with-php.json  qa-story-3-progressive.json  qa-story-4-profile-load.json  qa-story-5-webshell.json  qa-story-6-nmap-import.json  qa-story-7-multistage.json
crack/bloodtrail/: cli.py  command_mappings.py  command_suggester.py  config.py  display_commands.py  extractors.py  ip_resolver.py  main.py  payload_generator.py  pwned_tracker.py  query_runner.py
crack/bloodtrail/autospray/: executor.py
crack/bloodtrail/cypher_queries/: adcs.json  attack_chains.json  delegation.json  lateral_movement.json  privilege_escalation.json  pwned_tracking.json
crack/bloodtrail/data/: query_mappings.json
crack/bloodtrail/display/: __init__.py  attack_paths.py  authenticated.py  post_exploit.py  pwned_display.py  spray.py  tables.py
crack/bloodtrail/mappings/: __init__.py
crack/breach/: .gitignore  CLAUDE.md  WORKFLOW.md  index.html  package-lock.json  package.json  start.sh  tsconfig.json  vite.config.ts  vitest.config.ts
crack/breach/tests/: factories.ts  setup.ts  test_credential_ipc.spec.ts  test_engagement_ipc.spec.ts  test_loot_ipc.spec.ts  test_session_ipc.spec.ts
crack/config/: QUICKSTART.md  README.md  __init__.py  manager.py  validators.py  variables.py
crack/core/: __init__.py
crack/core/debug/: __init__.py  compat.py  enums.py  formatters.py  logger.py  rotation.py
crack/core/themes/: PYWAL_INTEGRATION.md
crack/core/utils/: __init__.py  ports.py
crack/crack/: __init__.py
crack/crack/reference/: __init__.py  core
crack/crackpedia/: CLAUDE.md  README.md  index.html  package-lock.json  package.json  start.sh  vitest.config.ts
crack/crackpedia/tests/: setup.ts  test_graph_data.spec.ts  test_neo4j_ipc.spec.ts  test_search.spec.ts
crack/data/chains/: metadata.json
crack/data/cheatsheets/: format_ssh_tunneling.py
crack/data/commands/: firewall.json
crack/db/: ADDITIONS_SUMMARY.md  CATEGORIZATION_SUMMARY.md  CLAUDE.md  CLEANUP_SUMMARY.md  ENRICHMENT_LOG.md  FORMATTING_PROGRESS.md  NEO4J_IMPORT_SUMMARY.md  NOTES_FORMATTING_GUIDE.md  README_VALIDATION.md  RELATIONSHIP_CONVENTIONS.md  REMAPPING_COMPLETE.md  WRITEUP_QUICKSTART.md  __init__.py  broken_references_categorization.md  cli.py  config.py  format_descriptions.py  isolated_commands_prioritized.csv  migrate.py  migrate_data.py  schema.sql  validate.py  verify_neo4j_import.py  violations_analysis.json  violations_matrix.csv
crack/db/migrations/: README.md  (+18 more)
crack/demonstrations/: README.md
crack/dependencies/: linpeas_linux_amd64
crack/docs/: AGENT_F0_B_REPORT.md  CMS_MADE_SIMPLE_AUTHENTICATED_RCE_ADAPTATION.md  FAQ.md  MASTER_INDEX.md  QUICK_REFERENCE.md  README.md  SCAN_ANALYZER.md  TIME_SQLI_METHODOLOGY.md  USAGE.md  VIDEO_PRODUCTION_CHECKLIST.md  master-index.md
crack/enumeration/: __init__.py  cli.py  html_enum.py  sqli_followup.py  sqli_fu.py  sqli_scanner.py  sqli_scanner_new.py
crack/examples/: checkpoint_manager_demo.py  credential_form_standalone.py  sql_adapter_demo.py
crack/exploit/: __init__.py  airgeddon_helper.py  cve_lookup.py  linpeas_helper.py
crack/htb_dog/: htb_dog_repo
crack/mcpserver/: CLAUDE.md  README.md  __init__.py  server.py
crack/network/: __init__.py  dns_enum.py  enum_scan.py  parallel_enumerator.py  port_scanner.py  scan_analyzer.py
crack/prism/: cli.py
crack/qa_profiles/: README.md  generate_profiles.py  run_qa_story.sh  verify_all_stories.sh
crack/reference/: CHAINS_INTERACTIVE_MVP.md  CLAUDE.md  NEO4J_ARCHITECTURE.md  README.md  __init__.py  attack-chain-builder-GUIDE.md  cli.py
crack/roadmap/: service-relationship-mapper.md
crack/scripts/: migrate_plugin_to_sql.py  similarity_audit.py  web_recon.sh
crack/sessions/: DEMO_VALIDATION.py  DNS_TUNNEL_GUIDE.md  F0-A_FOUNDATION_REPORT.md  F2-B_DNS_ICMP_IMPLEMENTATION_REPORT.md  FINAL_INTEGRATION_REPORT.md  HTTP_BEACON_SUMMARY.md  HTTP_BEACON_USAGE.md  ICMP_TUNNEL_GUIDE.md  SHELL_ENHANCEMENT_GUIDE.md  TCP_USAGE.md  TUNNEL_GUIDE.md  USAGE_EXAMPLE.py  __init__.py  config.py  interfaces.py  manager.py  models.py
crack/shared/: index.ts
crack/sqli/: __main__.py  databases.py  reference.py  reporter.py  scanner.py  sqli_scanner.py  techniques.py
crack/tests/: README.md  __init__.py  conftest.py
crack/themes/: THEME_SELECTOR.md  __init__.py  colors.py  helpers.py  manager.py  presets.py  pywal_adapter.py  selector.py
crack/tools/: __init__.py
crack/track/: PLUGIN_CONTRIBUTION_GUIDE.md  README.md  __init__.py  cli.py  visualizer.py
crack/utils/: __init__.py  colors.py  curl_parser.py
crack/visualize/: README.md  __init__.py  cli.py  filters.py  graph_builder.py  models.py
crack/web/: __init__.py  html_enum.py  param_discover.py  param_extract.py
(+2797 files in other folders)
