[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crack"
version = "1.0.0"
description = "C.R.A.C.K. - (C)omprehensive (R)econ & (A)ttack (C)reation (K)it - Professional pentesting tools for OSCP"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "OSCP Student", email = "student@oscp.local"},
]
keywords = ["security", "pentesting", "oscp", "web", "enumeration", "sqli", "reconnaissance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "urllib3>=1.26.0",
    "rich>=13.0.0",
    "neo4j>=5.15.0",
    "pyfiglet>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/crack"
Documentation = "https://github.com/yourusername/crack#readme"
Repository = "https://github.com/yourusername/crack.git"
Issues = "https://github.com/yourusername/crack/issues"

[project.scripts]
# Main command with subcommands
crack = "crack.cli:main"

[tool.setuptools]
packages = [
    "crack",
    "crack.network",
    "crack.web",
    "crack.sqli",
    "crack.exploit",
    "crack.utils",
    "crack.reference",
    "crack.reference.core",
    "crack.reference.data",
    "crack.reference.docs",
    "db"
]

[tool.setuptools.package-dir]
crack = "."

[tool.setuptools.package-data]
crack = ["*.md", "*.txt"]