[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crack"
version = "1.0.0"
description = "C.R.A.C.K. - (C)omprehensive (R)econ & (A)ttack (C)reation (K)it - Professional pentesting tools for OSCP"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "OSCP Student", email = "student@oscp.local"},
]
keywords = ["security", "pentesting", "oscp", "web", "enumeration", "sqli", "reconnaissance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "urllib3>=1.26.0",
    "rich>=13.0.0",
    "neo4j>=5.15.0",
    "dnspython>=2.0.0",
    "pyfiglet>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/crack"
Documentation = "https://github.com/yourusername/crack#readme"
Repository = "https://github.com/yourusername/crack.git"
Issues = "https://github.com/yourusername/crack/issues"

[project.scripts]
# Main command with subcommands
crack = "crack.cli:main"

[tool.setuptools]
packages = [
    "crack",
    "crack.bloodtrail",
    "crack.bloodtrail.autospray",
    "crack.bloodtrail.display",
    "crack.bloodtrail.mappings",
    "crack.config",
    "crack.db",
    "crack.network",
    "crack.prism",
    "crack.prism.display",
    "crack.prism.models",
    "crack.prism.neo4j",
    "crack.prism.parsers",
    "crack.prism.parsers.mimikatz",
    "crack.prism.parsers.nmap",
    "crack.reference",
    "crack.reference.builders",
    "crack.reference.chains",
    "crack.reference.chains.core",
    "crack.reference.chains.filtering",
    "crack.reference.chains.parsing",
    "crack.reference.chains.variables",
    "crack.reference.cli",
    "crack.reference.core",
    "crack.reference.generators",
    "crack.reference.models",
    "crack.reference.patterns",
    "crack.sessions",
    "crack.sessions.listeners",
    "crack.sessions.shell",
    "crack.sessions.storage",
    "crack.sessions.tunnel",
    "crack.sqli",
    "crack.themes",
    "crack.utils",
    "crack.web",
]

[tool.setuptools.package-dir]
crack = "."
"crack.bloodtrail" = "bloodtrail"
"crack.config" = "config"
"crack.db" = "db"
"crack.network" = "network"
"crack.prism" = "prism"
"crack.reference" = "reference"
"crack.sessions" = "sessions"
"crack.sqli" = "sqli"
"crack.themes" = "themes"
"crack.utils" = "utils"
"crack.web" = "web"

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.txt", "*.yaml", "*.cypher"]