[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crack"
version = "1.0.0"
description = "C.R.A.C.K. - (C)omprehensive (R)econ & (A)ttack (C)reation (K)it - Professional pentesting tools for OSCP"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "CodeBlackwell"},
]
keywords = ["security", "pentesting", "oscp", "web", "enumeration", "sqli", "reconnaissance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "urllib3>=1.26.0",
    "rich>=13.0.0",
    "neo4j>=5.15.0",
    "dnspython>=2.0.0",
    "pyfiglet>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/CodeBlackwell/crack"
Documentation = "https://github.com/CodeBlackwell/crack#readme"
Repository = "https://github.com/CodeBlackwell/crack.git"
Issues = "https://github.com/CodeBlackwell/crack/issues"

[project.scripts]
# Main command with subcommands
crack = "crack.cli:main"

[tool.setuptools]
packages = [
    "crack",
    # Core foundation
    "crack.core",
    "crack.core.config",
    "crack.core.themes",
    "crack.core.utils",
    # Tools - Recon
    "crack.tools",
    "crack.tools.recon",
    "crack.tools.recon.network",
    "crack.tools.recon.web",
    "crack.tools.recon.sqli",
    # Tools - Post-Exploitation
    "crack.tools.post",
    "crack.tools.post.bloodtrail",
    "crack.tools.post.bloodtrail.autospray",
    "crack.tools.post.bloodtrail.display",
    "crack.tools.post.bloodtrail.mappings",
    "crack.tools.post.prism",
    "crack.tools.post.prism.display",
    "crack.tools.post.prism.models",
    "crack.tools.post.prism.neo4j",
    "crack.tools.post.prism.parsers",
    "crack.tools.post.prism.parsers.mimikatz",
    "crack.tools.post.prism.parsers.nmap",
    "crack.tools.post.sessions",
    "crack.tools.post.sessions.listeners",
    "crack.tools.post.sessions.shell",
    "crack.tools.post.sessions.storage",
    "crack.tools.post.sessions.tunnel",
    # Reference system
    "crack.reference",
    "crack.reference.builders",
    "crack.reference.chains",
    "crack.reference.chains.core",
    "crack.reference.chains.filtering",
    "crack.reference.chains.parsing",
    "crack.reference.chains.variables",
    "crack.reference.cli",
    "crack.reference.core",
    "crack.reference.generators",
    "crack.reference.models",
    "crack.reference.patterns",
    # Database
    "crack.db",
]

[tool.setuptools.package-dir]
crack = "."
# Core
"crack.core" = "core"
"crack.core.config" = "core/config"
"crack.core.themes" = "core/themes"
"crack.core.utils" = "core/utils"
# Tools - Recon
"crack.tools" = "tools"
"crack.tools.recon" = "tools/recon"
"crack.tools.recon.network" = "tools/recon/network"
"crack.tools.recon.web" = "tools/recon/web"
"crack.tools.recon.sqli" = "tools/recon/sqli"
# Tools - Post
"crack.tools.post" = "tools/post"
"crack.tools.post.bloodtrail" = "tools/post/bloodtrail"
"crack.tools.post.prism" = "tools/post/prism"
"crack.tools.post.sessions" = "tools/post/sessions"
# Reference
"crack.reference" = "reference"
# Database
"crack.db" = "db"

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.txt", "*.yaml", "*.cypher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "asyncio: marks tests as async",
    "slow: marks tests as slow",
    "integration: marks tests requiring external services",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
